apps/homepage/templates/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-prefix
  namespace: homepage
spec:
  stripPrefix:
    prefixes:
      - /homepage
