apps/homepage/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: homepage-homepage-prefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /homepage
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 80
